@@ -1,5 +1,11 @@
 2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-main.c: (main):
+
+	Don't leak the option context.
+
+2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/bookmarks/ephy-topic-action.c: (drag_data_received_cb),
 	(create_tool_item), (ephy_topic_action_sync_label), (get_popup),
 	(erase_popup), (child_changed_cb), (child_removed_cb),
